<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rru.taweevat.sunantha.nattapat.enssystem.SignUpActivity"
    android:background="@drawable/wall">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:text="@string/signup"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSignUpSave"
        android:text="@string/signup"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/button3"
        android:layout_margin="20dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:id="@+id/textView2"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:layout_weight="2"
                    android:hint="@string/userpass"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/textView3"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_weight="2"
                    android:hint="@string/passseting"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/textView4"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:hint="@string/namebox" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:id="@+id/textView5"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText6"
                    android:layout_weight="2"
                    android:inputType="text"
                    android:hint="@string/surnamebox" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:id="@+id/textView6"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ragSex"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/radioButton"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/radioButton2"
                    android:checked="false"
                    android:layout_weight="1" />
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText8"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:hint="@string/phonebox" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:id="@+id/textView8"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText9"
                    android:layout_weight="2"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailbox" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>